feat(surface): preserve cortical scalar semantics across viewer backends
Add scalar and face fields, fragment evaluation and bounded approximation,
nearest partitions, fitted viewports, depth handling, native picking and
publication legends across the portable raster, JavaFX and Three.js paths.
Preserve sampling and hemisphere provenance, ingest FreeSurfer morphometry,
and extend viewer documents, examples and compatibility gates.

Retain the visual QA plates, benchmark receipts, review records and upstream
patches with their original provenance. Patch context whitespace is preserved
because it is part of the recorded diff syntax; other staged files pass the
whitespace check. Compressed receipts and JSON artifacts parse successfully.

No new browser automation or full viewer admission is claimed. The combined
compileAll run stopped earlier at the transitive Gale conflict in latentJVM.
Focused HRF (232 per platform) and locus-data (21 per platform) tests pass on
JVM and Scala.js; historical surface receipts retain their stated boundaries.